[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostkey"
version = "1.2.0"
description = "Ghost Key: check password strength, detect breached passwords, and generate secure passwords."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jugal Joshi (W1ZARD)" }]
keywords = ["password", "security", "cli", "entropy", "haveibeenpwned", "breach", "passphrase"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Portfolio = "https://jugaljoshi.vercel.app"
Repository = "https://gitlab.com/w1zard1/password-toolkit"

[project.scripts]
ghostkey = "password_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["password_toolkit*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
